link aprentice space in navbar + page names mentor/apprentice pages

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -99,7 +99,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a href="<%= user_path(current_user.id) %>" class="dropdown-item link-green">Mes informations</a>
               <div class="dropdown-divider"></div>
-              <a href="#" class="dropdown-item link-green">Mon espace apprenti </a>
+              <a href="<%= apprentice_show_user_path(current_user.id) %>" class="dropdown-item link-green">Mon espace apprenti </a>
               <div class="dropdown-divider"></div>
               <a href="<%= mentor_show_user_path(current_user.id) %>" class="dropdown-item link-green">Mon espace mentor</a>
               <div class="dropdown-divider"></div>
