--- a/app/views/users/apprentice_show.html.erb
+++ b/app/views/users/apprentice_show.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col m-4">
+      <h2>Mon espace apprenti</h2>
       <%= render partial: 'users/show-partial-profile' %>
       <!-- CONFIRMED APPOINTMENTS -->
       <h4 class="card-title mt-3 text-center">Séances confirmées</h4>
