--- a/app/views/users/mentor_show.html.erb
+++ b/app/views/users/mentor_show.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col m-4">
+      <h2>Mon espace mentor</h2>
       <%= render partial: 'users/show-partial-profile' %>
       <h4 class="card-title mt-3 text-center">Je propose ces activités :</h4>
       <hr>
