--- a/app/views/users/_show-profile.html.erb
+++ b/app/views/users/_show-profile.html.erb
@@ -3,7 +3,11 @@
 <div class="card-body">
 <h2 class="text-center m-4">Mon profil</h2>
   <div class="avatar-big m-auto">
-  <img class="avatar-img rounded-circle" src="https://images.pexels.com/photos/5706424/pexels-photo-5706424.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+    <%if @user.avatar.attached?%>
+      <%= image_tag @user.avatar, alt: 'avatar', class: "avatar-img rounded-circle" %>
+    <%else%>
+      <%= image_tag("user_default.jpg", class: "avatar-img rounded-circle") %>
+    <%end%>
   </div><br><hr><br>
   <table class="table table-borderless max-width-18 m-auto m-4">
     <tbody>
