--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,5 +1,3 @@
 <!-- BACK LINK -->
-<%= render 'charges/new' %> 
-
-<h1>Appointment#new</h1>
-<p>Find me in app/views/appointment/new.html.erb</p>
+<h1>Appointment#show</h1>
+<p>Find me in app/views/appointment/show.html.erb</p>
