--- a/app/views/users/apprentice_show.html.erb
+++ b/app/views/users/apprentice_show.html.erb
@@ -8,7 +8,7 @@
       <hr>
       <% if @future_paid_appointments %>
         <% @future_paid_appointments.each do |future_paid_appointment| %>
-        <%= render partial: 'layouts/card-talent', locals: {model: future_paid_appointment.talent, type: "paid"} %>
+        <%= render partial: 'layouts/card-talent', locals: {model: future_paid_appointment, type: "paid"} %>
         <% end %>
       <% else %>
         Tu n'as pas de séances confirmées.
@@ -18,7 +18,7 @@
       <hr>
       <% if @past_paid_appointments %>
         <% @past_paid_appointments.each do |past_paid_appointments| %>
-        <%= render partial: 'layouts/card-talent', locals: {model: past_paid_appointments.talent, type: "past"} %>
+        <%= render partial: 'layouts/card-talent', locals: {model: past_paid_appointments, type: "past"} %>
         <% end %>
       <% else %>
         Tu n'as pas de séances passées.
@@ -26,6 +26,17 @@
     </div>
     <div class="col">
       <!--To implement when Stripe ok and validation by mentor ok-->
+      <!-- PAST APPOINTMENTS -->
+      <h4 class="card-title mt-3 text-center">En attente de payement</h4>
+      <hr>
+      <% if @not_paid_appointments %>
+        <% @not_paid_appointments.each do |not_paid_appointments| %>
+        <%= render partial: 'layouts/card-talent', locals: {model: not_paid_appointments, type: "mentor-validate"} %>
+        <% end %>
+      <% else %>
+        Tu n'as pas de séances passées.
+      <% end %>
+
     </div>
   </div>
 </div>
