--- a/app/views/layouts/_box-search-result.html.erb
+++ b/app/views/layouts/_box-search-result.html.erb
@@ -1,15 +1,4 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-        <%= render partial: 'layouts/searchform-half', locals: {keyword: params[:search_keywords]} %>
-        <br>
-        <% @found_talents.each do |talent|%>
-            <%= render partial: 'layouts/card-talent', locals: {model: talent, type: "search-result"} %>
-        <% end %>
-    </div>
-    <div class="col" id="map">
-    </div>
-        <script>
+<script>
             function initMap(){
                 var options = {
                     zoom:8,
@@ -17,15 +6,31 @@
                 }
                 // New map
                 var map = new google.maps.Map(document.getElementById('map'), options);
-                // Add marker
-                var marker = new google.maps.Marker({
-                    position:{lat:48.8640928,lng:2.2482579},
+              
+            }
+            function addMarker(lng, lat){
+              var marker = new google.maps.Marker({
+                    position:{lat:lat,lng:lng},
                     map:map
                 });
             }
         </script>
         <script defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCROEXaB0Wy3Go4BC2Mv8oAg8uVR4r9PmM&callback=initMap">
-        </script>
+</script>
+<div class="container">
+  <div class="row">
+    <div class="col">
+        <%= render partial: 'layouts/searchform-half', locals: {keyword: params[:search_keywords]} %>
+        <br>
+        <% @found_talents.each do |talent|%>
+            <%= render partial: 'layouts/card-talent', locals: {model: talent, type: "search-result"} %>
+
+            <script> addMarker(<%= talent.place.longitude%>, <%= talent.place.latitude%>)</script>
+        <% end %>
+    </div>
+    <div class="col" id="map">
+    </div>
+        
   </div>
 </div>
