--- a/app/views/charges/_new.html.erb
+++ b/app/views/charges/_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag talent_appointment_charges_path(model.talent, model, price: model.talent.price) do %>
+<%= form_tag talent_appointment_charges_path(model, appointment, price: model.price) do %>
   <article>
     <% if flash[:error].present? %>
       <div id="error_explanation">
@@ -6,7 +6,7 @@
       </div>
     <% end %>
     <label class="amount">
-      <span>Total: <%= model.talent.price %> €</span>
+      <span>Total: <%= model.price %> €</span>
     </label>
   </article>
 
@@ -15,6 +15,6 @@
                 data-label="Payer"
                 data-description="Payer"
                 data-currency="EUR"
-                data-amount=<%= model.talent.price*100 %>
+                data-amount=<%= convert_price(model.price) %>
                 data-locale="fr"></script>
 <% end %>
