--- a/app/views/talents/_show_talent.html.erb
+++ b/app/views/talents/_show_talent.html.erb
@@ -34,7 +34,7 @@
           </tr>
           <tr>
             <th scope="col">Prix:</th>
-            <td>à implanter</td>
+            <td><%= @talent.price %> €</td>
           </tr>
         </tbody>
       </table>
