--- a/app/views/users/apprentice_show.html.erb
+++ b/app/views/users/apprentice_show.html.erb
@@ -4,37 +4,37 @@
       <h2>Mon espace apprenti</h2>
       <%= render partial: 'users/show-partial-profile' %>
       <!-- CONFIRMED APPOINTMENTS -->
-      <h4 class="card-title mt-3 text-center">Séances confirmées</h4>
+      <h4 class="card-title mt-4">Séances confirmées :</h4>
       <hr>
-      <% if @future_paid_appointments %>
+      <% if @future_paid_appointments && @future_paid_appointments.count > 0 %>
         <% @future_paid_appointments.each do |future_paid_appointment| %>
         <%= render partial: 'layouts/card-talent', locals: {model: future_paid_appointment.talent, type: "paid"} %>
         <% end %>
       <% else %>
-        Tu n'as pas de séances confirmées.
+        Aucune séance confirmée.
       <% end %>
       <!-- PAST APPOINTMENTS -->
-      <h4 class="card-title mt-3 text-center">Séances passées</h4>
+      <h4 class="card-title mt-4">Séances passées :</h4>
       <hr>
-      <% if @past_paid_appointments %>
+      <% if @past_paid_appointments && @past_paid_appointments.count > 0 %>
         <% @past_paid_appointments.each do |past_paid_appointments| %>
         <%= render partial: 'layouts/card-talent', locals: {model: past_paid_appointments.talent, type: "past"} %>
         <% end %>
       <% else %>
-        Tu n'as pas de séances passées.
+        Aucune séance passée.
       <% end %>
     </div>
     <div class="col">
       <!--To implement when Stripe ok and validation by mentor ok-->
       <!-- PAST APPOINTMENTS -->
-      <h4 class="card-title mt-3 text-center">En attente de payement</h4>
+      <h4 class="card-title mt-4">Séances en attente de paiement :</h4>
       <hr>
-      <% if @not_paid_appointments %>
+      <% if @not_paid_appointments && @not_paid_appointments.count > 0 %>
         <% @not_paid_appointments.each do |not_paid_appointments| %>
         <%= render partial: 'layouts/card-talent', locals: {model: not_paid_appointments.talent, appointment: not_paid_appointments, type: "mentor-validate"} %>
         <% end %>
       <% else %>
-        Tu n'as pas de séances passées.
+        Aucune séance en attente de paiement.
       <% end %>
 
     </div>
