--- a/app/views/users/mentor_show.html.erb
+++ b/app/views/users/mentor_show.html.erb
@@ -3,17 +3,29 @@
     <div class="col m-4">
       <h2>Mon espace mentor</h2>
       <%= render partial: 'users/show-partial-profile' %>
-      <h4 class="card-title mt-3 text-center">Je propose ces activités :</h4>
+
+
+      <h4 class="card-title mt-4">Je propose ces activités :</h4>
       <hr>
-      <% if !@current_user.talents.nil? %>
+      <% if @current_user.talents && @current_user.talents.count > 0  %>
         <% @current_user.talents.each do |talent| %>
         <%= render partial: 'layouts/card-talent', locals: {model: talent, type: "mentor"} %>
         <% end %>
       <% else %>
-        Tu n'as pas de talent proposé !
+        Pas encore d'activité proposée.
       <% end %>
     </div>
     <div class="col m-4">
+      <!-- APPOINTMENTS -->
+      <h4 class="card-title mt-4">Séances à venir :</h4>
+      <hr>
+      <% if @future_paid_appointments && @future_paid_appointments.count > 0 %>
+        <% @future_paid_appointments.each do |future_paid_appointment| %>
+        <%= render partial: 'layouts/validate_appointment_card', locals: {model: future_paid_appointment.talent, type: "paid"} %>
+        <% end %>
+      <% else %>
+        Aucune séance confirmée.
+      <% end %>
     </div>
   </div>
 </div>
@@ -28,16 +40,11 @@
 =end%>
 <!-- MY TALENTS -->
 
-<!-- APPOINTMENTS -->
-<h4 class="card-title mt-3 text-center">Rendez-vous à venir :</h4>
-<% if @future_paid_appointments %>
-  <% @future_paid_appointments.each do |future_paid_appointment| %>
-  <%= render partial: 'layouts/validate_appointment_card', locals: {model: future_paid_appointment.talent, type: "paid"} %>
-  <% end %>
-<% else %>
-  Tu n'as pas de séances confirmées.
-<% end %>
 
-<div class="actions">
-  <%= button_to 'Créer une nouvelle activité', new_talent_path(), method: :get, class: "btn btn-primary btn-block" %>
+<div class="row">
+  <div class="col m-4">
+    <div class="actions ml-3">
+      <%= button_to 'Proposer une activité', new_talent_path(), method: :get, class: "btn btn-primary" %>
+    </div>
+  </div>
 </div>
