MIGRATIONS + add booleans mentorvalidate/paid on appointments + add boolean is_admin on users + mentor/apprentice profils + image on navbar + admin menu in navbar

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -652,6 +652,10 @@ a:hover {
   max-width: 15rem;
 }
 
+.max-width-1 {
+  max-width: 1rem;
+}
+
 .item-center {
   align-items: center;
   justify-content: center;
