--- a/app/views/users/mentor_show.html.erb
+++ b/app/views/users/mentor_show.html.erb
@@ -1,10 +1,13 @@
 <div class="container">
   <div class="row">
+    <!-- LEFT COLUMN -->
     <div class="col m-4">
       <h2>Mon espace mentor</h2>
+
+      <!-- PROFIL -->
       <%= render partial: 'users/show-partial-profile' %>
 
-
+      <!-- TALENTS -->
       <h4 class="card-title mt-4">Je propose ces activités :</h4>
       <hr>
       <% if @current_user.talents && @current_user.talents.count > 0  %>
@@ -14,9 +17,35 @@
       <% else %>
         Pas encore d'activité proposée.
       <% end %>
+
     </div>
+
+    <!-- RIGHT COLUMN -->
     <div class="col m-4">
-      <!-- APPOINTMENTS -->
+
+      <!-- APPOINTMENTS THAT NEED TO BE VALIDATE -->
+      <h4 class="card-title mt-4">Séances à valider :</h4>
+      <hr>
+      <% if @not_validate_appointments && @not_validate_appointments.count > 0 %>
+        <% @not_validate_appointments.each do |not_validate_appointment| %>
+        <%= render partial: 'layouts/validate_appointment_card', locals: {model: not_validate_appointment.talent, type: "apprentice-validate"} %>
+        <% end %>
+      <% else %>
+        Aucune séance à valider.
+      <% end %>
+
+      <!-- APPOINTMENTS THAT NEED TO BE PAID -->
+      <h4 class="card-title mt-4">Séances en attente de paiement :</h4>
+      <hr>
+      <% if @not_paid_appointments && @not_paid_appointments.count > 0 %>
+        <% @not_paid_appointments.each do |not_paid_appointment| %>
+        <%= render partial: 'layouts/validate_appointment_card', locals: {model: not_paid_appointment.talent, type: "mentor-validate"} %>
+        <% end %>
+      <% else %>
+        Aucune séance en attente de paiement.
+      <% end %>
+
+      <!-- FUTURE VALIDATE & PAID APPOINTMENTS -->
       <h4 class="card-title mt-4">Séances à venir :</h4>
       <hr>
       <% if @future_paid_appointments && @future_paid_appointments.count > 0 %>
@@ -26,6 +55,18 @@
       <% else %>
         Aucune séance confirmée.
       <% end %>
+
+      <!-- PAST VALIDATE & PAID APPOINTMENTS -->
+      <h4 class="card-title mt-4">Séances passées :</h4>
+      <hr>
+      <% if @past_paid_appointments && @past_paid_appointments.count > 0 %>
+        <% @past_paid_appointments.each do |past_paid_appointment| %>
+        <%= render partial: 'layouts/validate_appointment_card', locals: {model: past_paid_appointment.talent, type: "past"} %>
+        <% end %>
+      <% else %>
+        Aucune séance passée.
+      <% end %>
+
     </div>
   </div>
 </div>
