--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -93,7 +93,11 @@
       <% if user_signed_in? %>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle btn btn-outline-light " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-user-circle mr-1"></i>
+              <%if @user.avatar.attached?%>
+                <%= image_tag @user.avatar, alt: 'avatar', class: "avatar-img rounded-circle max-width-1" %>
+              <%else%>
+                <%= image_tag("user_default.jpg", class: "avatar-img rounded-circle") %>
+              <%end%>
               Mon espace
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -103,6 +107,10 @@
               <div class="dropdown-divider"></div>
               <a href="<%= mentor_show_user_path(current_user.id) %>" class="dropdown-item link-green">Mon espace mentor</a>
               <div class="dropdown-divider"></div>
+              <% if is_current_user_admin? %>
+                <a href="#" class="dropdown-item link-green">Mon espace ADMIN</a>
+                <div class="dropdown-divider"></div>
+              <%end%>
               <a href="<%= destroy_user_session_path(session[:user_id]) %>" data-confirm="Es-tu sûr de vouloir te déconnecter ?" data-method="DELETE" class="dropdown-item link-green">Déconnexion</a>
             </div>
           </li>
