create review fnctional

--- a/app/views/layouts/_card-talent.html.erb
+++ b/app/views/layouts/_card-talent.html.erb
@@ -47,7 +47,7 @@
         <% when "past" %>
           <div class="col-md-3 m-auto pr-4 text-center">
             <p class="text-secondary">Évènement passé</p>
-            <a href="#">Évaluer ce rendez-vous</a>
+            <%= link_to "Évaluer", new_talent_appointment_review_path(model, appointment), class: "btn btn-outline-primary btn-sm m-2" %>
           </div>
         <% when "mentor" %>
           <div class="col-md-3 m-auto pr-4 text-center">
