--- a/app/views/users/apprentice_show.html.erb
+++ b/app/views/users/apprentice_show.html.erb
@@ -8,7 +8,7 @@
       <hr>
       <% if @future_paid_appointments && @future_paid_appointments.count > 0 %>
         <% @future_paid_appointments.each do |future_paid_appointment| %>
-        <%= render partial: 'layouts/card-talent', locals: {model: future_paid_appointment.talent, type: "paid"} %>
+        <%= render partial: 'layouts/card-talent', locals: {model: future_paid_appointment.talent,appointment: future_paid_appointment, type: "paid"} %>
         <% end %>
       <% else %>
         Aucune séance confirmée.
@@ -18,7 +18,7 @@
       <hr>
       <% if @past_paid_appointments && @past_paid_appointments.count > 0 %>
         <% @past_paid_appointments.each do |past_paid_appointments| %>
-        <%= render partial: 'layouts/card-talent', locals: {model: past_paid_appointments.talent, type: "past"} %>
+        <%= render partial: 'layouts/card-talent', locals: {model: past_paid_appointments.talent, appointment: past_paid_appointments, type: "past"} %>
         <% end %>
       <% else %>
         Aucune séance passée.
