--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -93,8 +93,8 @@
       <% if user_signed_in? %>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle btn btn-outline-light " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%if @user.avatar.attached?%>
-                <%= image_tag @user.avatar, alt: 'avatar', class: "avatar-img rounded-circle max-width-1" %>
+              <%if current_user.avatar.attached?%>
+                <%= image_tag current_user.avatar, alt: 'avatar', class: "avatar-img rounded-circle max-width-1" %>
               <%else%>
                 <%= image_tag("user_default.jpg", class: "avatar-img rounded-circle") %>
               <%end%>
