--- a/app/views/layouts/_searchform.html.erb
+++ b/app/views/layouts/_searchform.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag search_results_path, method: 'get' do %>
     <div class="form-group row max-width-50">
-        <label for="inputEmail3" class="col-sm-3 col-form-label-lg">Je souhaite découvrir :</label>
+        <label for="inputEmail3" class="col-sm-3 col-form-label-lg text-white">Je souhaite découvrir :</label>
         <div class="col-sm-8">
           <%= text_field_tag :search_keywords, nil, class: "form-control form-control-lg", id: "search_keywords", placeholder: "Recherche un talent" %>
         </div>
