--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -608,6 +608,15 @@ a:hover {
 .card-img-top {
   border-top-left-radius: 1.8rem;
   border-top-right-radius: 1.8rem;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.card-img-container {
+  height: 200px;
+  width: 15rem;
 }
 
 .card-img {
