Update of about us page and link to github

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -6,49 +6,62 @@
 <br>
 
 <!-- about page cards -->
-<div class = "row" style="justify-content:center">
-  <div class="card card-custom shadow mb-3 text-center max-width-18" style="width:250px; margin-up:30px; margin-right:30px; margin-down:50px;">
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class="card-img-top" alt="...">
+<div class="container">
+<div class = "row d-flex justify-content-center">
+  
+  <div class="card card-custom shadow m-4 text-center max-width-18">
+    <div class="card-img-container">
+    <img src="https://images.pexels.com/photos/169573/pexels-photo-169573.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" class="card-img-top" alt="...">
+    </div>
     <div class="card-body">
       <h6 class="card-title">Diane DECOURT</h5>
-      <a href="#">Lien GitHub</a>
+      <a href="https://github.com/dediane">Lien GitHub</a>
     </div>
   </div>
 
-  <div class="card card-custom shadow mb-3 text-center max-width-18" style="width:250px; margin-right:30px; margin-down:50px;">
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class="card-img-top" alt="...">
+  <div class="card card-custom shadow m-4 text-center max-width-18">
+    <div class="card-img-container">
+    <img src="https://images.pexels.com/photos/160109/pexels-photo-160109.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="card-img-top" alt="...">
+    </div>
     <div class="card-body">
       <h6 class="card-title">Mehdi Lucas AMMAR</h5>
-      <a href="#">Lien GitHub</a>
+      <a href="https://github.com/Mehdi-Lucas">Lien GitHub</a>
     </div>
   </div>
 
-  <div class="card card-custom shadow mb-3 text-center max-width-18" style="width:250px; margin-right:30px; margin-down:50px;">
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class="card-img-top" alt="...">
+  <div class="card card-custom shadow m-4 text-center max-width-18">
+      <div class="card-img-container">
+    <img src="https://images.pexels.com/photos/265642/pexels-photo-265642.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="card-img-top" alt="...">
+      </div>
     <div class="card-body">
       <h6 class="card-title">Patrice HUSZEZO</h6>
-      <a href="#">Lien GitHub</a>
+      <a href="https://github.com/PatriceH7">Lien GitHub</a>
     </div>
   </div>
 
-  <div class="card card-custom shadow mb-3 text-center max-width-18" style="width:250px; margin-right:30px; margin-down:50px;">
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class="card-img-top" alt="...">
+  <div class="card card-custom shadow m-4 text-center max-width-18">
+    <div class="card-img-container">
+    <img src="https://images.pexels.com/photos/265642/pexels-photo-265642.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="card-img-top" alt="...">
+    </div>
     <div class="card-body">
       <h6 class="card-title">Rémi BARNAT</h6>
-      <a href="#">Lien GitHub</a>
+      <a href="https://github.com/rbarnat">Lien GitHub</a>
     </div>
   </div>
 
-   <div class="card card-custom shadow mb-3 text-center max-width-18"style="width:250px; margin-right:30px; margin-down:50px;">
-    <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class="card-img-top" alt="...">
+   <div class="card card-custom shadow m-4 text-center max-width-18">
+    <div class="card-img-container">
+    <img src="https://images.pexels.com/photos/169573/pexels-photo-169573.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" class="card-img-top" alt="...">
+    </div>
     <div class="card-body">
       <h6 class="card-title">Yohan FLEURY</h6>
-      <a href="#">Lien GitHub</a>
+      <a href="https://github.com/YohanFleury">Lien GitHub</a>
     </div>
   </div>
   <br>
   <br>
   <br>
+</div>
 </div>
 <br>
 <br>
