jumbo with video and full witdh

--- a/app/views/layouts/_jumbo-landing.html.erb
+++ b/app/views/layouts/_jumbo-landing.html.erb
@@ -1,11 +1,12 @@
 <div class="jumbotron">
     <video autoplay="" muted="" loop="">
-    <source src="https://vod-progressive.akamaized.net/exp=1607433729~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F1086%2F17%2F430432875%2F1870283989.mp4~hmac=77ee012d5f84fa914b55dbdfd51ed14d268b0becdf3d1349aff4595e70f923fd/vimeo-prod-skyfire-std-us/01/1086/17/430432875/1870283989.mp4" type="video/mp4">
+    <source src="https://storage.coverr.co/videos/1di9RQ7cmcFzQqixD02TjDrson5YlqEAB?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcHBJZCI6Ijg3NjdFMzIzRjlGQzEzN0E4QTAyIiwiaWF0IjoxNjA3NDY0Mjc2fQ.fHpBsI6j4uLNaLvvKqggU9frbZ8e5-CZLoQSTmldZKM" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-    <div class="video-container">
-        <h5 class="max-width-45 text-center p-1 rounded text-white">Trouve un mentor pour apprendre de nouvelles compétences en peer-learning, puis enseigne à ton tour ces compétences à un apprenti ! </h5>
-        <br><br><br><br><br><br><br>
-        <%= render partial: 'layouts/searchform' %>
+    <div class="video-container"><br><br><br><br><br><br>
+        <h4 class="max-width-45 text-center p-1 rounded text-white black-background">Trouve un mentor pour apprendre de nouvelles compétences en peer-learning, puis enseigne à ton tour ces compétences à un apprenti ! </h4>
     </div>
+</div>
+<div class="d-flex justify-content-center">
+   <%= render partial: 'layouts/searchform' %>
 </div>
