--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <!-- HEADER -->
     <%= render 'layouts/navbar' %>
 
-    <div class="container">
+    <!--<div class="container">-->
       <!-- USERS MESSAGES -->
       <%= render 'layouts/messages' %>  
 
