--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -855,6 +855,6 @@ video {
   background-color: transparent;
 }
 
-.white-background {
-  background-color: rgba(255, 255, 255, 0.5)
+.black-background {
+  background-color: rgba(3, 3, 3, 0.2)
 }
