Amending about pictures

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -11,7 +11,7 @@
   
   <div class="card card-custom shadow m-4 text-center max-width-18">
     <div class="card-img-container">
-    <img src="https://images.pexels.com/photos/169573/pexels-photo-169573.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" class="card-img-top" alt="...">
+    <%= image_tag("static_about1.jpg", alt: "picture", class: "img card-img-top") %>
     </div>
     <div class="card-body">
       <h6 class="card-title">Diane DECOURT</h5>
@@ -21,7 +21,7 @@
 
   <div class="card card-custom shadow m-4 text-center max-width-18">
     <div class="card-img-container">
-    <img src="https://images.pexels.com/photos/160109/pexels-photo-160109.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="card-img-top" alt="...">
+    <%= image_tag("static_about2.jpg", alt: "picture", class: "img card-img-top") %>
     </div>
     <div class="card-body">
       <h6 class="card-title">Mehdi Lucas AMMAR</h5>
@@ -31,7 +31,7 @@
 
   <div class="card card-custom shadow m-4 text-center max-width-18">
       <div class="card-img-container">
-    <img src="https://images.pexels.com/photos/265642/pexels-photo-265642.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="card-img-top" alt="...">
+     <%= image_tag("static_about3.jpg", alt: "picture", class: "img card-img-top") %>
       </div>
     <div class="card-body">
       <h6 class="card-title">Patrice HUSZEZO</h6>
@@ -41,7 +41,7 @@
 
   <div class="card card-custom shadow m-4 text-center max-width-18">
     <div class="card-img-container">
-    <img src="https://images.pexels.com/photos/265642/pexels-photo-265642.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="card-img-top" alt="...">
+    <%= image_tag("static_about3.jpg", alt: "picture", class: "img card-img-top") %>
     </div>
     <div class="card-body">
       <h6 class="card-title">Rémi BARNAT</h6>
@@ -51,7 +51,7 @@
 
    <div class="card card-custom shadow m-4 text-center max-width-18">
     <div class="card-img-container">
-    <img src="https://images.pexels.com/photos/169573/pexels-photo-169573.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" class="card-img-top" alt="...">
+    <%= image_tag("static_about1.jpg", alt: "picture", class: "img card-img-top") %>
     </div>
     <div class="card-body">
       <h6 class="card-title">Yohan FLEURY</h6>
